# c-genericLogger

./: .appveyor.yml  CMakeLists.txt  CMakeObjects.PL  README.pod
.github/workflows/: unix.yml  windows.yml
include/: genericLogger.h
include/genericLogger/internal/: runtime.h
src/: genericLogger.c
